# jellysub-ai

./: .dockerignore  .env.example  .gitignore  AI.md  Dockerfile  Dockerfile-Gpu  README.md  config.json  config.py  env_config.py  main.py  pyproject.toml
.github/workflows/: docker.yml
core/: asr.py  audio.py  jellyfin_api.py  subtitle_checker.py  subtitle_writer.py  task_manager.py  translate.py  utils.py  vad.py
core/asr/: __init__.py  base.py  openai_api.py  qwen3.py  sensevoice.py  vad_wrapper.py
core/translate/: __init__.py  base.py  local.py  openai_api.py
static/: admin.html  home.html  login.html  style.css
tests/: test_api.py  test_config.py  test_generate_subtitles.py  test_real_media.py  test_subtitle_checker.py  test_subtitle_writer.py
