[project]
name = "jellysub-ai"
version = "0.1.0"
description = "Jellyfin automated AI subtitle generation service"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "modelscope>=1.36.2",
    "openai>=1.0",
    "torch>=2.0",
    "sentencepiece>=0.2.0",
    "qwen-asr>=0.0.1",
    "python-dotenv>=1.0",
    "pyotp>=2.9",
]

[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
]

# 可选：使用 ModelScope 下载模型时需要的依赖
# pip install modelscope 或 uv pip install modelscope

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: slow end-to-end tests that load real models"]
addopts = "-m 'not integration'"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }